--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "yarn build-icons && next build ",
     "export": "next export",
     "commit": "npx git-cz",
+    "deploy": "npm run build && npm run export",
     "stest": "next build && next export && http-server ./out"
   },
   "dependencies": {
