--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "next": "^8.0.1",
+    "next-ga": "^2.3.4",
     "next-offline": "^3.3.6",
     "next-page-transitions": "^1.0.0-alpha.6",
     "react": "^16.8.2",
